--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html{
-    background-color: #f5f5dc;
-    font-family:'Arial Narrow Bold';
+    /*background-color: #f5f5dc;*/
+    background-color: #f5f5f5;
     margin: 0;
 }
 
@@ -21,7 +21,7 @@ body{
     margin-bottom: 60px;
     margin-left: 80px;
     margin-right: 80px;
-    background-color: #ececec;
+    background-color: #39a1e6;
     
 }
 
@@ -33,8 +33,10 @@ body{
 
 .header-centro{
     a{
+        align-items: center;
         cursor: pointer;
         text-decoration: none;
+        font-family: "SUSE", sans-serif;
         font-size: 32px;
         color: #0C0C0C;
     }
@@ -54,6 +56,7 @@ body{
 }
 
 .centro{
+    padding-top: 14px;
     display: flex;
     list-style: none;
     text-decoration: none;
@@ -65,7 +68,7 @@ body{
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
-    background-color: #EFEFEF;
+    background-color: #39a1e6
 }
 
 .dark-mode {
@@ -78,41 +81,49 @@ body{
 #userButton, #darkModeButton{
     cursor: pointer;
     padding: 10px;
-    border-radius: 5px;
-    background-color: #ececec;
+    border: none;
+    background-color: #39a1e6;
+    color: #0C0C0C;
 }
+
 
 /*FOOTER*/
 footer{
-    position: fixed;
-    bottom: 0;
     width: 100%;
 }
 .footer-redesocial{
-    gap: laft ;
+    gap: left ;
     justify-content: space-between;
     display: flex;
     align-items: center;
-    border: 2px solid #000;
-    padding: 10px;
-    background-color: #d3b45e;
-    margin: 0px;
+    border-right: 4px solid #000;
+    border-left: 4px solid #000;
+    border-top: 4px solid #000;
+    padding: 25px 20px 10px 20px;
+    background-color: #39a1e6;
+    margin-top: 80px;
 }
 
 .logo-social{
     margin-left: 35px;
     justify-content:center;
-    width: 300px;
+    width: 225px;
     height: 70px;
 }
 
+.fab{
+    margin-right: 10px;
+}
+
 .footer-opcoes{
-    justify-content: space-around;
+    justify-content: space-between;
     display: flex;
     align-items: center;
-    border: 2px solid black;
-    padding: 10px;
-    background-color: #dc143c;
+    border-right: 4px solid #000;
+    border-left: 4px solid #000;
+    border-bottom: 4px solid #000;
+    padding: 0px 20px 25px 20px;
+    background-color: #39a1e6;
     margin: 0px;
 }
 
@@ -140,4 +151,78 @@ footer{
     list-style: none;
     text-decoration: none;
     gap: 15px;
+}
+
+/* CONTEUDO SEÇÃO ! */
+section{
+    margin-left: 160px;
+    margin-right: 160px;
+    gap: 15px;
+}
+
+.conteudo-secao{ 
+    justify-content: space-around;
+    align-items: center;
+    font-family: "SUSE", sans-serif !important;
+    
+    img{
+        border-radius: 50px;
+        width: 332px;
+        height: 221px;
+    }
+
+    h1{
+        font-family: "Handjet", sans-serif;
+        text-align: center;
+        font-weight: 800;
+        background-color: rgb(43, 150, 226);
+        margin-bottom: 50px;
+        border-radius: 12px;
+    }
+
+    h2{
+        text-align: center;
+    }
+
+    p{
+        text-align: center;
+        margin-bottom: 0px;
+    }
+    
+    .tagfilme{
+        cursor: default;
+        font-family: "Nerko One";
+        color: #000;
+        background-color: mediumaquamarine;
+        margin: auto;
+        border: none;
+        margin-top: 8px;
+        margin-bottom: 8px;
+    }
+
+    .Fix{
+        position: absolute;
+    }
+
+}
+
+.conteudo-fila{
+    display: flex;
+    gap: 35px;
+    padding-bottom: 35px;
+
+    .card{
+        border-radius: 20px;
+        padding: 20px;
+        border: none;
+        width: 374px;
+    }
+
+    .star-wars{
+        background: linear-gradient(0deg, rgba(253,187,45,1) 0%, rgba(0,0,0,1) 100%);
+    }
+
+    button{
+        border-radius: 50px;
+    }
 }
