--- a/style.css
+++ b/style.css
@@ -21,14 +21,14 @@ body{
     margin-bottom: 60px;
     margin-left: 80px;
     margin-right: 80px;
-    background-color: #39a1e6;
+    background-color: rebeccapurple;
     
 }
 
 .logo{
     justify-content: left;
-    width: 215px;
-    height: 70px;
+    width: 250px;
+    height: 60px;
 }
 
 .header-centro{
@@ -38,7 +38,7 @@ body{
         text-decoration: none;
         font-family: "SUSE", sans-serif;
         font-size: 32px;
-        color: #0C0C0C;
+        color: snow;
     }
 
     a:after{
@@ -68,7 +68,7 @@ body{
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
-    background-color: #39a1e6
+    background-color: rebeccapurple
 }
 
 .dark-mode {
@@ -82,8 +82,8 @@ body{
     cursor: pointer;
     padding: 10px;
     border: none;
-    background-color: #39a1e6;
-    color: #0C0C0C;
+    background-color: rebeccapurple;
+    color: snow;
 }
 
 
@@ -92,6 +92,7 @@ footer{
     width: 100%;
 }
 .footer-redesocial{
+    color: snow;
     gap: left ;
     justify-content: space-between;
     display: flex;
@@ -100,15 +101,15 @@ footer{
     border-left: 4px solid #000;
     border-top: 4px solid #000;
     padding: 25px 20px 10px 20px;
-    background-color: #39a1e6;
+    background-color: rebeccapurple;
     margin-top: 80px;
 }
 
 .logo-social{
     margin-left: 35px;
     justify-content:center;
-    width: 225px;
-    height: 70px;
+    width: 250px;
+    height: 60px;
 }
 
 .fab{
@@ -116,6 +117,7 @@ footer{
 }
 
 .footer-opcoes{
+    color: snow;
     justify-content: space-between;
     display: flex;
     align-items: center;
@@ -123,7 +125,7 @@ footer{
     border-left: 4px solid #000;
     border-bottom: 4px solid #000;
     padding: 0px 20px 25px 20px;
-    background-color: #39a1e6;
+    background-color: rebeccapurple;
     margin: 0px;
 }
 
@@ -131,7 +133,7 @@ footer{
     a{
         cursor: pointer;
         font-size: 18px;
-        color: #0C0C0C;
+        color: snow;
     }
     a:after{
         content: "|";
@@ -168,28 +170,23 @@ section{
     img{
         border-radius: 50px;
         width: 332px;
-        height: 221px;
+        height: 476px;
     }
 
     h1{
+        color: snow;
         font-family: "Handjet", sans-serif;
         text-align: center;
         font-weight: 800;
-        background-color: rgb(43, 150, 226);
+        background-color: rebeccapurple;
         margin-bottom: 50px;
         border-radius: 12px;
     }
 
-    h2{
-        text-align: center;
-    }
-
-    p{
-        text-align: center;
-        margin-bottom: 0px;
-    }
+    
     
     .tagfilme{
+        font-weight: 100;
         cursor: default;
         font-family: "Nerko One";
         color: #000;
@@ -197,32 +194,66 @@ section{
         margin: auto;
         border: none;
         margin-top: 8px;
-        margin-bottom: 8px;
+        padding: 2px 10px;
+        border-radius: 50px;
     }
-
-    .Fix{
-        position: absolute;
-    }
-
+    
+    
 }
 
 .conteudo-fila{
     display: flex;
     gap: 35px;
     padding-bottom: 35px;
-
+    
     .card{
+        display: flex;
+        align-items: center;
+        color: snow;
+        background-color: darkslategrey;
         border-radius: 20px;
         padding: 20px;
         border: none;
         width: 374px;
-    }
+        height: 830px;
+        
+        h2{
+            display: flex;
+            align-items: center;
+            height: 90px;
+            padding-top: 15px;
+            text-align: center;
+        }
 
-    .star-wars{
-        background: linear-gradient(0deg, rgba(253,187,45,1) 0%, rgba(0,0,0,1) 100%);
+        p{
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 5;
+            -webkit-box-orient: vertical;
+            text-align: center;
+            margin-bottom: 0px;
+        }
+        
     }
-
-    button{
+    
+    .saiba-mais{
+        width: 150px;
+        height: 34px;
+        position: absolute;
+        bottom: 20px;
+        font-weight: bolder;
+        background-color: snow;
         border-radius: 50px;
+        border: none;
+    }
+    
+    .saiba-mais:hover{
+        background-color: rgb(187, 213, 213);
+    }
+    
+    .container-tags{
+        position: absolute;
+        bottom: 70px;
     }
 }
+
